<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppHub</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_image">Product image</string>
    <string name="oops_something_went_wrong_please_try_again">Oops something went wrong, please try again!</string>
    <string name="loading">Loading</string>
    <string name="app_store">Play Store</string>
    <string name="send_sms">Send SMS</string>
    <string name="share">Share</string>
    <string name="share_product_detail_to">Share Product detail to</string>
    <string-array name="sort_options">
        <item>Sort By</item>
        <item>Rating</item>
        <item>In-App purchase</item>
    </string-array>
        <string name="search">Search</string>
        <string name="search_app_">Search App...</string>
        <string name="type">Type</string>
        <string name="in_app_purchase">In-App Purchase</string>
        <string name="last_updated">Last Updated</string>
        <string name="please_install_google_play_store_">Please install Google Play Store!</string>

</resources>
